updating .project files

--- a/UdemyMLAZ/.project
+++ b/UdemyMLAZ/.project
@@ -3,16 +3,7 @@
 	<name>UdemyMLAZ</name>
 	<comment></comment>
 	<projects>
+		<project>UdemyMLAZ_PyDev</project>
+		<project>UdemyMLAZ_R</project>
 	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>de.walware.statet.r.builders.RSupport</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>de.walware.statet.base.StatetNature</nature>
-		<nature>de.walware.statet.r.RNature</nature>
-	</natures>
 </projectDescription>
